# stealth-fetch-mcp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.local.json
.omc/: project-memory.json
.omc/scientist/reports/: curl_cffi_inventory_analysis.md
.omc/sessions/: 5c02a5e6-cfb8-4087-b3c6-d2e1f20aa989.json  6de1c24f-055f-4cb8-a184-0f8f996feec1.json  b7901df0-7f26-4a44-a0ab-84889df9f3b9.json
.omc/state/: agent-replay-40ec3b5c-6e35-495f-9e1e-57acd6569396.jsonl  agent-replay-5c02a5e6-cfb8-4087-b3c6-d2e1f20aa989.jsonl  agent-replay-6de1c24f-055f-4cb8-a184-0f8f996feec1.jsonl  agent-replay-75398029-a4af-4b79-a643-5ef0cf30b1a8.jsonl  agent-replay-760162b9-62a7-4732-99d3-7a7543b60982.jsonl  agent-replay-b7901df0-7f26-4a44-a0ab-84889df9f3b9.jsonl  agent-replay-eb9228b8-7d79-4b44-8e6c-6b767aceca6c.jsonl  hud-state.json  last-tool-error.json  setup-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-02-21T21-28-44-902Z.json
specs/: api_contracts.md  module_overview.md  project_overview.md  project_structure.md  setup_guide.md  tech_stack.md
src/: AGENTS.md
src/stealth_fetch_mcp/: AGENTS.md  __init__.py  __main__.py  client.py  parser.py  server.py
tests/: AGENTS.md  test_client.py  test_parser.py  test_server.py
