[project]
name = "stealth-fetch-mcp"
version = "0.1.0"
description = "MCP server for stealth web fetch/parsing via curl_cffi browser impersonation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "curl-cffi>=0.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2",
]

[project.scripts]
stealth-fetch-mcp = "stealth_fetch_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stealth_fetch_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
